[gd_scene load_steps=3 format=3 uid="uid://bd6w8rsa2iwym"]

[ext_resource type="Script" uid="uid://bw0dssi7hv0l4" path="res://inventory.gd" id="1_r3lym"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pohso"]
bg_color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3lym")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.41, 0, 0, 1)

[node name="inv" type="Panel" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 80.0
offset_right = 416.0
offset_bottom = 632.0
metadata/_edit_group_ = true

[node name="Container" type="ScrollContainer" parent="inv"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="inv/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="inv"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 33.0
offset_right = -36.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Inventory empty

you can get items from gacha"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="equ" type="Panel" parent="."]
layout_mode = 1
offset_left = 768.0
offset_top = 80.0
offset_right = 1120.0
offset_bottom = 632.0

[node name="Label" type="Label" parent="equ"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 20.0
offset_right = -16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Nothing equipped

drag items from inventory to equip"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="helmet" type="Marker2D" parent="equ"]
position = Vector2(96, 80)

[node name="armour" type="Marker2D" parent="equ"]
position = Vector2(256, 176)

[node name="weapon" type="Marker2D" parent="equ"]
position = Vector2(256, 368)

[node name="artifact" type="Marker2D" parent="equ"]
position = Vector2(96, 272)

[node name="boot" type="Marker2D" parent="equ"]
position = Vector2(96, 464)

[node name="container" type="Node2D" parent="equ"]

[node name="item_stats" type="Panel" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 88.0
offset_right = 752.0
offset_bottom = 320.0

[node name="Label" type="Label" parent="item_stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26

[node name="remove" type="Button" parent="item_stats/Label"]
layout_mode = 0
offset_left = 160.0
offset_top = 272.0
offset_right = 320.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 22
text = "REMOVE"

[node name="Control" type="Control" parent="item_stats"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="equip" type="Button" parent="item_stats/Control"]
layout_mode = 0
offset_top = 248.0
offset_right = 144.0
offset_bottom = 296.0
theme_override_font_sizes/font_size = 22
text = "EQUIP"

[node name="enhance" type="Button" parent="item_stats/Control"]
layout_mode = 0
offset_top = 312.0
offset_right = 144.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 22
text = "ENHANCE"

[node name="Panel" type="Panel" parent="item_stats"]
process_mode = 3
layout_mode = 0
offset_left = -16.0
offset_top = 168.0
offset_right = 352.0
offset_bottom = 416.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pohso")

[node name="Label" type="Label" parent="item_stats/Panel"]
layout_mode = 0
offset_left = 16.0
offset_right = 352.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 26
text = "Swap selected item
 with equipped item?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ok" type="Button" parent="item_stats/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 168.0
offset_right = 103.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 22
text = "OK"

[node name="cancel" type="Button" parent="item_stats/Panel"]
layout_mode = 0
offset_left = 224.0
offset_top = 168.0
offset_right = 302.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 22
text = "Cancel"

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 1048.0
offset_top = 16.0
offset_right = 1129.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 32
text = "back"

[node name="tem" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="button_down" from="item_stats/Label/remove" to="." method="_on_remove_button_down"]
[connection signal="pressed" from="item_stats/Label/remove" to="." method="_on_remove_pressed"]
[connection signal="button_down" from="item_stats/Control/equip" to="." method="_on_equip_button_down"]
[connection signal="pressed" from="item_stats/Control/equip" to="." method="_on_equip_pressed"]
[connection signal="button_down" from="item_stats/Control/enhance" to="." method="_on_enhance_button_down"]
[connection signal="pressed" from="item_stats/Panel/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="item_stats/Panel/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
